--- a/RxPractice/RxPractice/Application/Info.plist
+++ b/RxPractice/RxPractice/Application/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ClIENT_ID</key>
+	<string>$(ClIENT_ID)</string>
+	<key>ClIENT_SECRET</key>
+	<string>$(ClIENT_SECRET)</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
